--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
+osx_image: xcode9
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+podfile: Example/Podfile
+xcode_workspace: Example/AGExpandingTableView.xcworkspace
+xcode_scheme: AGExpandingTableView-Example
+xcode_sdk: iphonesimulator9.3
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/AGExpandingTableView.xcworkspace -scheme AGExpandingTableView-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- xcodebuild clean build test -workspace Example/AGExpandingTableView.xcworkspace -scheme AGExpandingTableView-Example -destination "platform=iOS Simulator,name=iPhone 7,OS=11.0" CODE_SIGNING_REQUIRED=NO
